--- a/trifle/data/ui/window.ui
+++ b/trifle/data/ui/window.ui
@@ -12,9 +12,12 @@
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkBox" id="box2">
+          <object class="GtkBox" id="toolbar-box">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <style>
+              <class name="menubar"/>
+            </style>
             <child>
               <object class="GtkToolbar" id="sidetoolbar">
                 <property name="width_request">250</property>
@@ -24,7 +27,7 @@
                 <property name="show_arrow">False</property>
                 <property name="icon_size">2</property>
                 <style>
-                  <class name="menubar"/>
+                  <class name="primary-toolbar"/>
                 </style>
               </object>
               <packing>
@@ -34,21 +37,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolbar" id="maintoolbar">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="toolbar_style">text</property>
-                <property name="show_arrow">False</property>
-                <property name="icon_size">2</property>
-                <style>
-                  <class name="menubar"/>
-                </style>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
+              <placeholder/>
             </child>
           </object>
           <packing>
@@ -105,40 +94,13 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="mainview-box">
-                <property name="height_request">300</property>
+              <object class="GtkScrolledWindow" id="item">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="orientation">vertical</property>
+                <property name="can_focus">True</property>
+                <property name="min_content_width">200</property>
+                <property name="min_content_height">200</property>
                 <child>
                   <placeholder/>
-                </child>
-                <child>
-                  <object class="GtkSeparator" id="separator2">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkScrolledWindow" id="item">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="min_content_width">200</property>
-                    <property name="min_content_height">200</property>
-                    <child>
-                      <placeholder/>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="expand">True</property>
-                    <property name="fill">True</property>
-                    <property name="position">2</property>
-                  </packing>
                 </child>
               </object>
               <packing>
